<resources>
    <string name="app_name">Włóczykij</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="map_menu_item">Mapa</string>
    <string name="search_hint">Szukaj</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_abcd">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">login</string>
    <string name="prompt_password">hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_in_short">Zarejestruj się</string>
    <string name="error_invalid_email">Niepoprawny adres login</string>
    <string name="error_invalid_password">Hasło jest zbyt krótkie</string>
    <string name="error_incorrect_password">Hasło jest niepoprawne</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing login
        completions."
    </string>
    <string name="access_section">Dostęp</string>
    <string name="event">Wydarzenie</string>
    <string name="prompt_event_name">Nazwa*</string>
    <string name="prompt_place_of_meeting">Miejsce spotkania*</string>
    <string name="prompt_start_date">Start*</string>
    <string name="end_date">Koniec</string>
    <string name="prompt_participants_limit">Limit uczestników*</string>
    <string name="public_access">Publiczny dostęp</string>
    <string name="action_save_event">Zapisz</string>
    <string name="prompt_end_date">Koniec</string>
    <string name="title_activity_login">Zaloguj się</string>
    <string name="label">Włóczykij</string>
    <string name="register">Nie masz konta? Zarejestruj się</string>
    <string name="sign_up">Zarejestruj się</string>
    <string name="prompt_login_r">login</string>
    <string name="prompt_email_r">e-mail</string>
    <string name="prompt_first_name_r">imię</string>
    <string name="prompt_last_name_r">nazwisko</string>
    <string name="year_of_birth">rok urodzenia</string>
    <string name="repeat_password">powtórz hasło</string>
    <string name="already_member"><![CDATA[Jesteś członkiem? Zaloguj się!]]></string>
    <string name="action_sign_up">Zarejestruj się</string>
    <string name="title_sign_up">Zarejestruj się</string>
    <string name="action_unlog">Wyloguj się</string>
    <string name="action_manage_account">Zarządzaj kontem</string>
    <string name="account">Dane konta</string>
    <string name="events">Wydarzenia</string>
    <string name="my_events">Moje wydarzenia</string>
    <string name="public_events">Wydarzenia publiczne</string>
    <string name="action_remove_event">Usuń wydarzenie</string>
    <string name="accept_invitation">Akceptuj zaproszenie</string>
    <string name="reject_invitation">Odrzuć zaproszenie</string>
    <string name="find_tourists">Szukaj podróżników</string>
    <string name="save">Zapisz</string>
    <string name="weather">Pogoda</string>
</resources>
