<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/map_menu_item" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_event"
            android:title="@string/event" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
    </group>

    <item
        android:id="@+id/account"
        android:title="@string/access_section">
        <menu
            android:id="@+id/unlogged_user_menu">
            <item
                android:id="@+id/nav_log_in"
                android:icon="@drawable/ic_log_in"
                android:title="@string/action_sign_in" />
            <item
                android:id="@+id/nav_sign_up"
                android:icon="@drawable/ic_sign_up"
                android:title="@string/action_sign_up" />
            <item
                android:id="@+id/nav_unlog"
                android:icon="@drawable/ic_unlog"
                android:title="@string/action_unlog"
                android:visibility="gone"/>
        </menu>
    </item>

</menu>
