<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="pl.basistam.turysta.fragments.events.InvitationEventFragment">

    <ScrollView
        android:id="@+id/sv_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="56dp">

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_event_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:enabled="false"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="228dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp">

                    <EditText
                        android:id="@+id/edt_start_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Data rozpoczęcia*"
                        android:inputType="date"
                        android:maxLines="1"
                        android:enabled="false"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/edt_start_hour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Godzina*"
                        android:inputType="text"
                        android:maxLines="1"
                        android:enabled="false" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="228dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp">

                    <EditText
                        android:id="@+id/edt_end_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Data zakończenia"
                        android:inputType="date"
                        android:maxLines="1"
                        android:enabled="false" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/edt_end_hour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Godzina"
                        android:inputType="text"
                        android:maxLines="1"
                        android:enabled="false" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/edt_place_of_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_place_of_meeting"
                    android:inputType="text"
                    android:maxLines="1"
                    android:enabled="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_participants_limit"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_participants_limit"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:enabled="false"/>

                <CheckBox
                    android:id="@+id/chb_public_access"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/public_access"
                    android:enabled="false" />

            </android.support.design.widget.TextInputLayout>

            <ExpandableListView
                android:id="@+id/elv_participants"
                android:layout_height="100dp"
                android:layout_width="match_parent"
                />

            <Button
                android:id="@+id/btn_accept"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/accept_invitation"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_reject"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/reject_invitation"
                android:textStyle="bold"
                android:textColor="@color/red"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>